--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇮🇳 印度-1.60MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
+  - {name: 🇰🇷 韩国-233.3KB/s(Youtube:不良林), server: 129.154.53.120, port: 44600, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.38MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇧🇷 巴西-2.64MB/s(Youtube:不良林), server: fr.node.qchwnd.moe, port: 44612, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, sni: fr.node.qchwnd.moe, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.80MB/s(Youtube:不良林), server: gdcm3.relay.qchwnd.moe, port: 44608, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, sni: gdcm3.relay.qchwnd.moe, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-261.3KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.38MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
-  - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: hncu.relay.qchwnd.moe, port: 44611, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, sni: hncu.relay.qchwnd.moe, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-553.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-8.31MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.17MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-989.0KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.36MB/s(Youtube:不良林), server: hncu.relay.qchwnd.moe, port: 44612, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, sni: hncu.relay.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-643.4KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-820.3KB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
+  - {name: 🇨🇳 中国-463.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: a3fa58b581353bb375d2ddad0f327937a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-677.7KB/s(Youtube:不良林), server: gdcm3.relay.qchwnd.moe, port: 44608, type: trojan, password: 7def61a2-9aff-4691-ad6b-4564e9639b6d, sni: gdcm3.relay.qchwnd.moe, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-348.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇮🇳 印度-1.60MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-233.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-989.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-820.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-677.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇮🇳 印度-1.60MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-233.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-989.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-820.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-677.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇮🇳 印度-1.60MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-233.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-989.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-820.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-677.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇮🇳 印度-1.60MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-233.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-989.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-820.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-677.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇮🇳 印度-1.60MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-233.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-989.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-820.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-677.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇮🇳 印度-1.60MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-233.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-989.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-820.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-677.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇮🇳 印度-1.60MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-233.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.38MB/s(Youtube:不良林)
-      - 🇧🇷 巴西-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.3KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-553.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-989.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-820.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-677.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
