--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,31 +5,31 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-668.2KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-197.5KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-260.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-197.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-197.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-197.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -40,23 +40,23 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-197.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-197.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-197.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -72,8 +72,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-668.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-208.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-197.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-260.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
