--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.73MB/s(Youtube:不良林), server: riben.jindouyunjc.com, port: 1367, type: trojan, password: 0c6e7be8-784d-4a0f-8bab-705a4f12c687, sni: riben.jindouyunjc.com, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-337.8KB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
-  - {name: 🇮🇳 印度-1.42MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
-  - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: 43.200.6.24, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇸🇬 新加坡-657.4KB/s(Youtube:不良林), server: hy.hsichu.xyz, port: 443, type: trojan, password: HsCOkje2HH2PuRFb, sni: hy.hsichu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: docs.defun.us, port: 443, type: trojan, password: WEMagdSekdGBxh6g, sni: docs.defun.us, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.08MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 5e04bdc6-6f09-4f5e-a3c7-edf4d3220ad3}
+  - {name: 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇮🇳 印度-337.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-657.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇮🇳 印度-337.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-657.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇮🇳 印度-337.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-657.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇮🇳 印度-337.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-657.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇮🇳 印度-337.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-657.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇮🇳 印度-337.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-657.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇮🇳 印度-337.8KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-657.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
